--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "^20.11.26",
+    "@vitest/ui": "1.5.0",
     "prisma": "5.11.0",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
