feat: Fix spelling mistake in cSpell.words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "cSpell.words": [
-        "alreadt",
-        "Cristovam"
-    ]
+  "cSpell.words": ["alreadt", "Cristovam", "descrition"]
 }
